# SpectreCodingAgent

./: .gitignore  README.md  main.py  pyproject.toml  refresh_token.ps1  test_input.json  uipath.json
src/spectre_coding/: agent.py  auth.py  github_client.py  llm.py  xaml_fixer.py  xaml_scanner.py
tests/: test_agent.py  test_github_client.py  test_llm.py  test_xaml_fixer.py  test_xaml_scanner.py
