[project]
name = "SpectreCodingAgent"
version = "1.0.0"
description = "SpectreAI - Autonomous RPA bot code fix agent"
authors = [{ name = "Nithin BR" }]
requires-python = ">=3.10"
dependencies = [
    "uipath",
    "requests",
    "python-dotenv",
    "pygithub",
    "gitpython",
    "pytest-asyncio>=1.4.0",
]

[tool.uipath]
main = "main.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
